<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:importantForAccessibility="no"
    android:padding="16dp">


    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_bg"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/cadastro"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="#000000"
            android:layout_marginBottom="24dp" />


        <EditText
            android:id="@+id/etNomeCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nome"
            android:inputType="textPersonName"
            android:autofillHints="name"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_input" />


        <EditText
            android:id="@+id/etEmailCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:autofillHints="emailAddress"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_input" />


        <EditText
            android:id="@+id/etSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:autofillHints="newPassword"
            android:padding="12dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/rounded_input" />


        <EditText
            android:id="@+id/etConfirmarSenhaCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirmar_senha"
            android:inputType="textPassword"
            android:autofillHints="newPassword"
            android:padding="12dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/rounded_input" />


        <TextView
            android:id="@+id/tvVoltarLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="16dp"
            android:text="Já tem conta? Faça login"
            android:textColor="@android:color/holo_blue_dark"
            android:textSize="14sp"
            android:textStyle="bold"
            android:clickable="true"
            android:focusable="true"/>


        <Button
            android:id="@+id/btnCadastrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/cadastrar"
            android:background="@drawable/rounded_button"
            android:textColor="#000000"
            android:padding="14dp"
            android:layout_marginBottom="16dp"/>

    </LinearLayout>

</LinearLayout>
