<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:importantForAccessibility="no">

    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp"
        android:background="@drawable/rounded_bg"
        android:elevation="4dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:text="@string/login"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textColor="#000000"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="@drawable/rounded_input"
            android:hint="@string/email"
            android:inputType="textPersonName"
            android:autofillHints="username"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <EditText
            android:id="@+id/etSenha"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_input"
            android:hint="@string/senha"
            android:inputType="textPassword"
            android:autofillHints="password"
            android:paddingTop="14dp"
            android:paddingBottom="14dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:minHeight="48dp"
            android:textColorHint="#757575" />

        <TextView
            android:id="@+id/tvEsqueciSenha"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginBottom="0dp"
            android:text="@string/esqueci_minha_senha"
            android:textColor="#000000"
            android:textSize="12sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCadastrar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:clickable="true"
            android:focusable="true"
            android:gravity="center"
            android:minWidth="48dp"
            android:minHeight="48dp"
            android:paddingStart="20dp"
            android:paddingTop="12dp"
            android:paddingEnd="20dp"
            android:paddingBottom="12dp"
            android:textColor="@android:color/holo_blue_dark"
            android:text="@string/nao_tem_conta_cadastre_se"
            android:textSize="14sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEntrar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_button"
            android:text="@string/entrar"
            android:textColor="#000000"
            android:minHeight="48dp"/>

    </LinearLayout>


</LinearLayout>
